--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -55,5 +55,28 @@
     </div>
   </article>
 
+  <article>
+    <h3>Event binding</h3>
+    <div>
+      <button (click)="botaoClicado()" >Me clique!</button>
+
+      <br><br>
+
+      <input type="text" (keyup)="onKeyUp($event)" (keyup.enter)="salvarValor($any($event.target).value)" />
+      <br>
+      <p>Valor atual: {{ valorAtual }}</p>
+      <br>
+      <p>Valor salvo: {{ valorSalvo }}</p>
+
+      <!--
+      Embora na aula seja abordado mais a fundo, esta questão dos eventos de mouse optei por não fazer.
+      <br>
+      <span>
+        Passe o mouse sobre mim!
+      </span>
+      -->
+    </div>
+  </article>
+
 
 </section>
