--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -106,5 +106,11 @@
     </div>
   </article>
 
+  <article>
+    <h3>Input/Output properties</h3>
+
+    <app-curso></app-curso>
+  </article>
+
 
 </section>
