--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -109,7 +109,7 @@
   <article>
     <h3>Input/Output properties</h3>
 
-    <app-curso></app-curso>
+    <app-curso [nome]="nomeDoCurso"></app-curso>
   </article>
 
 
