Iniciando com output properties

--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -110,6 +110,9 @@
     <h3>Input/Output properties</h3>
 
     <app-curso [nome]="nomeDoCurso"></app-curso>
+
+    <contador></contador>
+
   </article>
 
 
