--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -4,6 +4,7 @@
 <app-diretiva-ngfor></app-diretiva-ngfor>
 <app-diretiva-ngclass></app-diretiva-ngclass>
 <app-diretiva-ngstyle></app-diretiva-ngstyle>
+<app-exemplo-n-content></app-exemplo-n-content>
 -->
 
-<app-exemplo-n-content></app-exemplo-n-content>
+<app-diretivas-customizadas></app-diretivas-customizadas>
