--- a/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -7,3 +7,7 @@
 <p highlightMouse>
   Texto com highlight quando passo o mouse.
 </p>
+
+<p highlight [defaultColor]="'grey'" [highlightColor]="'red'">
+  Texto com highlight com cores customizadas.
+</p>
