--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -18,6 +18,29 @@ Filtro:
 <input type="text" #novoValor>
 <button (click)="addCurso(novoValor.value)">Add curso</button>
 
+<h5>Pipe puro</h5>
+
 <ul>
   <li *ngFor="let liv of livros | filtroArray:filtro">{{ liv }}</li>
 </ul>
+
+<br><br>
+
+<h5>Pipe impuro</h5>
+
+<ul>
+  <li *ngFor="let liv of livros | filtroArrayImpuro:filtro">{{ liv }}</li>
+</ul>
+
+<br><br>
+
+<h5>Maneira correta de usar filtro nos projetos do mundo real</h5>
+
+<!-- falta pesquisar melhor aqui
+<ul>
+  <li *ngFor="let liv of obterCursos()>{{ liv }}</li>
+</ul>
+
+-->
+
+
