--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<mat-toolbar class="header mat-elevation-z4">
+  <span>
+      <a routerLink="/">
+          Logo
+      </a>
+  </span>
+
+</mat-toolbar>
+<mat-sidenav-container class="container">
+  <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
+      <mat-nav-list class="nav-list">
+          <a mat-list-item [routerLink]="['/login']" routerLinkActive="router-link-active">
+              <i class="material-icons">
+                  home
+              </i> Login
+          </a>
+          <a mat-list-item [routerLink]="['/cursos']" routerLinkActive="router-link-active">
+              <i class="material-icons">
+                  school
+              </i> Cursos
+          </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content class="content">
+      <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
