--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -19,9 +19,18 @@
                   school
               </i> Cursos
           </a>
+          <a mat-list-item [routerLink]="['/curso', idCurso.value]" routerLinkActive="router-link-active">
+            <i class="material-icons">
+                school
+            </i> Curso por id
+        </a>
       </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
+
+      <p>Entre com o id do curso:</p>
+      <input #idCurso>
+
       <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
