--- a/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -3,3 +3,6 @@
 <p>Id: {{ aluno.id }}</p>
 <p>Nome: {{ aluno.nome }}</p>
 <p>Email: {{ aluno.email }}</p>
+
+<br><br>
+<button (click)="editarContato()">Editar</button>
