--- a/rotas/src/app/cursos/cursos.component.html
+++ b/rotas/src/app/cursos/cursos.component.html
@@ -8,7 +8,7 @@
 <p>Lista de cursos</p>
 <p>Página: {{ pagina }}</p>
 <div>
-  <a *ngFor="let curso of cursos" [routerLink]="['/curso', curso.id]" >{{ curso.nome }}</a>
+  <a *ngFor="let curso of cursos" [routerLink]="['/cursos', curso.id]" >{{ curso.nome }}</a>
   <br>
 </div>
 
