Criando o formulário de login

--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -19,7 +19,7 @@
                   school
               </i> Cursos
           </a>
-          <a mat-list-item [routerLink]="['/curso', idCurso.value]" routerLinkActive="router-link-active">
+          <a mat-list-item [routerLink]="['/cursos', idCurso.value]" routerLinkActive="router-link-active">
             <i class="material-icons">
                 school
             </i> Curso por id
@@ -33,8 +33,10 @@
   </mat-sidenav>
   <mat-sidenav-content class="content">
 
+
       <p>Entre com o id do curso:</p>
       <input #idCurso>
+      <br><br>
 
       <router-outlet></router-outlet>
   </mat-sidenav-content>
