--- a/rotas/src/app/login/login.component.html
+++ b/rotas/src/app/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<h5>Login</h5>
+
+<div>
+  <label for="usuario">Usuário:</label>
+  <input type="text" id="usuario" [(ngModel)]="usuario.nome">
+  <br>
+
+  <label for="senha">Senha:</label>
+  <input type="password" id="senha" [(ngModel)]="usuario.senha">
+
+  <br>
+  <button type="submit" (click)="fazerLogin()">Login</button>
+</div>
