--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 </mat-toolbar>
 <mat-sidenav-container class="container">
-  <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
+  <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64" *ngIf="mostrarMenu">
       <mat-nav-list class="nav-list">
           <a mat-list-item [routerLink]="['/login']" routerLinkActive="router-link-active">
               <i class="material-icons">
