--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,11 +1,11 @@
-<form>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div>
     <label for="nome">Nome:</label>
-    <input type="text" id="nome">
+    <input type="text" id="nome" name="nome" ngModel>
 
     <br><br>
     <label for="email">Email:</label>
-    <input type="email" id="email" placeholder="nome@email.com">
+    <input type="email" id="email" placeholder="nome@email.com" name="email" ngModel>
 
     <br><br>
     <button type="submit">Submit</button>
