--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -2,7 +2,10 @@
   <div>
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome"
-    [(ngModel)]="usuario.nome" required>
+    [(ngModel)]="usuario.nome" required #nome>
+    <div>
+      Classes aplicadas ao campo acima: {{ nome.className }}
+    </div>
 
     <br><br>
     <label for="email">Email:</label>
