Desabilitando o botão de submit do formulário

--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -19,6 +19,7 @@
     name="email" [(ngModel)]="usuario.email" required email>
 
     <br><br>
-    <button type="submit">Submit</button>
+    <!-- Adicionado um property binding para desabilitar o botão-->
+    <button type="submit" [disabled]="!f.valid">Submit</button>
   </div>
 </form>
