Verificando dados do Form no template com JSON

--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -22,4 +22,6 @@
     <!-- Adicionado um property binding para desabilitar o botão-->
     <button type="submit" [disabled]="!f.valid">Submit</button>
   </div>
+
+  <app-form-debug [form]="f"></app-form-debug>
 </form>
