--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -18,51 +18,55 @@
     <input type="email" id="email" placeholder="nome@email.com"
     name="email" [(ngModel)]="usuario.email" required email>
 
-    <br><br>
-    <label for="cep">CEP:</label>
-    <input type="text" id="cep" name="cep" required ngModel #cep="ngModel">
-    <div *ngIf="!cep.valid && cep.touched">
-      CEP é obrigatório.
-    </div>
+    <div ngModelGroup="endereco">
 
-    <br><br>
-    <label for="numero">Número:</label>
-    <input type="text" id="numero" name="numero" required ngModel #numero="ngModel">
-    <div *ngIf="!numero.valid && numero.touched">
-      Número é obrigatório.
-    </div>
+      <br><br>
+      <label for="cep">CEP:</label>
+      <input type="text" id="cep" name="cep" required ngModel #cep="ngModel">
+      <div *ngIf="!cep.valid && cep.touched">
+        CEP é obrigatório.
+      </div>
 
-    <br><br>
-    <label for="complemento">Complemento:</label>
-    <input type="text" id="complemento" name="complemento" ngModel #complemento="ngModel">
+      <br><br>
+      <label for="numero">Número:</label>
+      <input type="text" id="numero" name="numero" required ngModel #numero="ngModel">
+      <div *ngIf="!numero.valid && numero.touched">
+        Número é obrigatório.
+      </div>
 
-    <br><br>
-    <label for="rua">Rua:</label>
-    <input type="text" id="rua" name="rua" required [ngModel]="usuario.rua" #rua="ngModel" readonly>
-    <div *ngIf="!rua.valid && rua.touched">
-      Rua é obrigatório.
-    </div>
+      <br><br>
+      <label for="complemento">Complemento:</label>
+      <input type="text" id="complemento" name="complemento" ngModel #complemento="ngModel">
 
-    <br><br>
-    <label for="bairro">Bairro:</label>
-    <input type="text" id="bairro" name="bairro" required [ngModel]="usuario.bairro" #bairro="ngModel" readonly>
-    <div *ngIf="!bairro.valid && bairro.touched">
-      Bairro é obrigatório.
-    </div>
+      <br><br>
+      <label for="rua">Rua:</label>
+      <input type="text" id="rua" name="rua" required ngModel #rua="ngModel" readonly>
+      <div *ngIf="!rua.valid && rua.touched">
+        Rua é obrigatório.
+      </div>
 
-    <br><br>
-    <label for="cidade">Cidade:</label>
-    <input type="text" id="cidade" name="cidade" required [ngModel]="usuario.cidade" #cidade="ngModel" readonly>
-    <div *ngIf="!cidade.valid && cidade.touched">
-      Cidade é obrigatório.
-    </div>
+      <br><br>
+      <label for="bairro">Bairro:</label>
+      <input type="text" id="bairro" name="bairro" required ngModel #bairro="ngModel" readonly>
+      <div *ngIf="!bairro.valid && bairro.touched">
+        Bairro é obrigatório.
+      </div>
 
-    <br><br>
-    <label for="estado">Estado:</label>
-    <input type="text" id="estado" name="estado" required [ngModel]="usuario.estado" #estado="ngModel" readonly>
-    <div *ngIf="!estado.valid && estado.touched">
-      Estado é obrigatório.
-    </div>
+      <br><br>
+      <label for="cidade">Cidade:</label>
+      <input type="text" id="cidade" name="cidade" required ngModel #cidade="ngModel" readonly>
+      <div *ngIf="!cidade.valid && cidade.touched">
+        Cidade é obrigatório.
+      </div>
+
+      <br><br>
+      <label for="estado">Estado:</label>
+      <input type="text" id="estado" name="estado" required ngModel #estado="ngModel" readonly>
+      <div *ngIf="!estado.valid && estado.touched">
+        Estado é obrigatório.
+      </div>
+
+  </div>
 
     <br><br>
     <!-- Adicionado um property binding para desabilitar o botão-->
