--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,1 +1,16 @@
-<p>data-form works!</p>
+<form [formGroup]="formulario">
+  <div>
+    <label for="nome">Nome:</label>
+    <input type="text" id="nome" formControlName="nome">
+
+    <br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="nome@email.com"
+    formControlName="email" >
+
+    <br><br>
+    <button type="submit">Submit</button>
+  </div>
+
+  <app-form-debug [form]="formulario"></app-form-debug>
+</form>
