--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -10,6 +10,7 @@
 
     <br><br>
     <button type="submit">Submit</button>
+    <button (click)="resetar()">Cancelar</button>
   </div>
 
   <app-form-debug [form]="formulario"></app-form-debug>
