--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -13,5 +13,69 @@
     <button (click)="resetar()">Cancelar</button>
   </div>
 
+  <div >
+
+    <br><br>
+    <label for="cep">CEP:</label>
+    <input type="text" id="cep" formControlName="cep">
+
+    <!--
+    <div *ngIf="!cep.valid && cep.touched">
+      CEP é obrigatório.
+    </div>
+    -->
+
+    <br><br>
+    <label for="numero">Número:</label>
+    <input type="text" id="numero" formControlName="numero">
+    <!--
+      <div *ngIf="!numero.valid && numero.touched">
+      Número é obrigatório.
+    </div>
+    -->
+
+    <br><br>
+    <label for="complemento">Complemento:</label>
+    <input type="text" id="complemento" formControlName="complemento">
+
+    <br><br>
+    <label for="rua">Rua:</label>
+    <input type="text" id="rua" formControlName="rua" readonly>
+    <!--
+    <div *ngIf="!rua.valid && rua.touched">
+      Rua é obrigatório.
+    </div>
+    -->
+
+    <br><br>
+    <label for="bairro">Bairro:</label>
+    <input type="text" id="bairro" formControlName="bairro" readonly>
+    <!--
+    <div *ngIf="!bairro.valid && bairro.touched">
+      Bairro é obrigatório.
+    </div>
+    -->
+
+    <br><br>
+    <label for="cidade">Cidade:</label>
+    <input type="text" id="cidade" formControlName="cidade" readonly>
+    <!--
+    <div *ngIf="!cidade.valid && cidade.touched">
+      Cidade é obrigatório.
+    </div>
+    -->
+
+    <br><br>
+    <label for="estado">Estado:</label>
+    <input type="text" id="estado" formControlName="estado" readonly>
+    <!--
+    <div *ngIf="!estado.valid && estado.touched">
+      Estado é obrigatório.
+    </div>
+    -->
+</div>
+
+
+
   <app-form-debug [form]="formulario"></app-form-debug>
 </form>
