Agrupando dados com form groups num data driven form

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -13,7 +13,7 @@
     <button (click)="resetar()">Cancelar</button>
   </div>
 
-  <div >
+  <div formGroupName="endereco">
 
     <br><br>
     <label for="cep">CEP:</label>
