--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -17,7 +17,7 @@
 
     <br><br>
     <label for="cep">CEP:</label>
-    <input type="text" id="cep" formControlName="cep">
+    <input type="text" id="cep" formControlName="cep" (blur)="consultaCEP()">
 
     <!--
     <div *ngIf="!cep.valid && cep.touched">
