Criando um checkbox toggle

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -40,6 +40,11 @@
     </div>
 
     <br><br>
+    <div>
+      <input type="checkbox" formControlName="termos">Aceito os termos.
+    </div>
+
+    <br><br>
     <button type="submit">Submit</button>
     <button (click)="resetar()">Cancelar</button>
     <button (click)="setarCargo()">Cargo</button>
