Inserida tag router-outlet

--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -9,3 +9,5 @@ falta criar o roteamento
   <li><a [routerLink]="['/']" routerLinkActive="active">Home</a></li>
   <li><a [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a></li>
 </ul>
+
+<router-outlet></router-outlet>
