Usando o pipe async para se inscrever num observable

--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -1,5 +1,5 @@
 <p>Lista de cursos</p>
 
 <ul>
-  <li *ngFor="let curso of cursos">{{ curso.nome }}</li>
+  <li *ngFor="let curso of cursos$ | async">{{ curso.nome }}</li>
 </ul>
