Criando o formulário para criação de um novo curso

--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -8,6 +8,7 @@ falta criar o roteamento
 <ul>
   <li><a [routerLink]="['/']" routerLinkActive="active">Home</a></li>
   <li><a [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a></li>
+  <li><a [routerLink]="['/cursos/novo']" routerLinkActive="active">Novo Curso</a></li>
 </ul>
 
 <router-outlet></router-outlet>
